[package]
name = "image-gilbert"
version = "0.1.0"
authors = ["Arhan Chaudhary <arhan.ch@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "wasm/lib.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.93"

console_error_panic_hook = { version = "0.1.7", optional = true }

[profile.release]
opt-level = "s"
