[package]
name = "image-gilbert"
version = "0.1.0"
authors = ["Arhan Chaudhary <arhan.ch@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "wasm/lib.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
js-sys = "0.3.70"
wasm-bindgen = "0.2.93"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.web-sys]
version = "0.3.70"
features = [
    "console",
    "HtmlCanvasElement",
    "ImageData",
    "CanvasRenderingContext2d",
]

[profile.release]
opt-level = "s"
