[package]
name = "image-gilbert"
version = "0.1.0"
authors = ["Arhan Chaudhary <arhan.ch@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "wasm/lib.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
js-sys = "0.3.70"
wasm-bindgen = "0.2.93"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = { version = "0.1.7", optional = true }
num = "0.4.3"
wasm-bindgen-futures = "0.4.43"

[dependencies.web-sys]
version = "0.3.70"
features = [
    "console",
    "Window",
    "Document",
    "Worker",
    "WorkerOptions",
    "WorkerType",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "HtmlImageElement",
    "File",
    "FileReader",
    "FileList",
    "ImageData",
    "CanvasRenderingContext2d",
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "--enable-bulk-memory",
    "--enable-threads",
    "--generate-global-effects",
    "--type-ssa",
    "-tnh",
    "-O4",
    "--closed-world",
    "--low-memory-unused",
    "-O4",
    "--flatten",
    "--rereloop",
    "-O4",
    "--gufa",
    "--type-merging",
    "-O4",
]

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
